2005-10-05  Phil Muldoon  <pmuldoon@redhat.com>

	* TaskEvent.java: Change class scope to public.

2005-10-04  Andrew Cagney  <cagney@redhat.com>

	* TestHostGet.java: New.
	* Host.java: Add getSelf.
	* LinuxHost.java: Implement getSelf.  Refactor updateProc into
	ProcChanges.

	* LinuxHost.java, Host.java: Delete sendAttachProc.
	
	* Host.java: Delete requestAttachProc.
	* HostState.java: Update.
	* TestUnpaused.java, TestStop.java, TestStopAndStop.java,
	TestStopAndGo.java, TestPaused.java, TestGoAndGo.java,
	TestAttachCloningThreads.java: Replace Host .requestAttachProc,
	with Proc .requestAttach.
	
	* TestAttachCloningThreads.java, TestGoAndGo.java,
	TestPaused.java, TestStop.java, TestStopAndGo.java,
	TestStopAndStop.java, TestUnpaused.java: Use TestLib .PidChild.
	Parameterize ProcCreatedObserver with the process pid.  Delete
	registerChild call, handled by PidChild.

	* TestStep.java: Move PidChild call to ProcCreatedObserver, delete
	global "pid".
	* TestLib.java: In class Child, always register the pid.

	* TestStep.java, TestAttachCloningThreads.java: Replace
	StopEventLoopOnProcDestroy with PidChild and Child
	.stopEventLoopOnDestroy.
	* TestLib.java: Add class PidChild.  Add method
	stopEventLoopOnDestroy to Child class.

	* Host.java, HostState.java: Add "Perform" prefix to
	PerformCreateAttachedProc event.

	* Host.java: Replace sendCreateProc with sendCreateAttachedProc.
	Replace requestCreateProc with requestCreateAttachedContinuedProc,
	and the private performCreateAttachedProc.
	* TestTerminated.java, TestSyscallOpen.java, TestSyscall.java,
	TestSyscall2.java, TestStep.java, TestRun.java, TestProcGet.java,
	TestLib.java, TestI386Regs.java, TestI386Modify.java,
	TestFork.java, TestExiting.java, TestExec.java, TestClone.java,
	LinuxHost.java, HostState.java: Update.

	* Host.java: Create nested HostEvents.
	* HostState.java: Replace existing "process" methods with
	"processRequestRefresh", "processRequestCreateProc", and
	"processRequestAttachProc".